--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ ErrorDocument 404 /404.html
 
 # редирект с about на about.html
 RewriteEngine On
-RewriteCond %{HTTP_HOST} novipovorot.pp.ua/about
+RewriteCond %{HTTPS_HOST} novipovorot.pp.ua/about
 RewriteRule (.*) novipovorot.pp.ua/about.html/$1 [R=301,L]
 
 
