--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 AddCharset UTF-8  .html 
 ErrorDocument 404 /404.html
 
+# редирект 
+RewriteCond %{REQUEST_URI} ^/about/$
+RewriteRule ^.*$ https://novipovorot.pp.ua/about.html/? [R=301,L]
+
 # кеш браузера
 <ifModule mod_expires.c>
 ExpiresActive On
