--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,9 @@ AddCharset UTF-8  .html
 ErrorDocument 404 /404.html
 
 # редирект 
+RewriteCond %{https://novipovorot.pp.ua/about} !-d
+RewriteRule ^([^.]+)$ /$https://novipovorot.pp.ua/about.html [R=301,L]
+
 #Redirect 301 /about/ https://novipovorot.pp.ua/about.html/
 
 # кеш браузера
