--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ AddCharset UTF-8  .html
 ErrorDocument 404 /404.html
 
 # редирект 
-RewriteCond %{https://novipovorot.pp.ua/about} !-d
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^.]+)$ /$https://novipovorot.pp.ua/about.html [R=301,L]
 
 #Redirect 301 /about/ https://novipovorot.pp.ua/about.html/
