--- a/.htaccess
+++ b/.htaccess
@@ -1,90 +1,3 @@
 AddCharset UTF-8  .html 
 ErrorDocument 404 /404.html
-
-# редирект 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^.]+)$ /$novipovorot.pp.ua/about.html [R=301,L]
-
-#Redirect 301 /about/ https://novipovorot.pp.ua/about.html/
-
-# кеш браузера
-<ifModule mod_expires.c>
-ExpiresActive On
-
-#по умолчанию кеш в 5 секунд
-ExpiresDefault "access plus 1 week"
-
-# Включаем кэширование на месяц
-ExpiresByType index.html "access plus 1 year"
-ExpiresByType about.html "access plus 1 year"
-ExpiresByType booking.html "access plus 1 year"
-ExpiresByType contact.html "access plus 1 year"
-ExpiresByType packages.html "access plus 1 year"
-ExpiresByType page-Beer.html "access plus 1 year"
-ExpiresByType page-Hortica.html "access plus 1 year"
-ExpiresByType page-Karpati.html "access plus 1 year"
-ExpiresByType page-LOL.html "access plus 1 year"
-ExpiresByType page-Limonariy.html "access plus 1 year"
-ExpiresByType page-Odessa-on-march.html "access plus 1 year"
-ExpiresByType page-Turkey.html "access plus 1 year"
-ExpiresByType page-cofe-Isla.html "access plus 1 year"
-ExpiresByType page-eight-march.html "access plus 1 year"
-ExpiresByType css/css_slider.css "access plus 1 year"
-ExpiresByType css/bootstrap.css "access plus 1 year"
-ExpiresByType css/font-awesome.min.css "access plus 1 year"
-ExpiresByType css/style.css "access plus 1 year"
-ExpiresByType libs/owl-carousel/owl.carousel.min.js "access plus 1 year"
-ExpiresByType libs/owl-carousel/owl.carousel.min.css "access plus 1 year"
-ExpiresByType images/feedback/feedback-1.jpg "access plus 1 year"
-ExpiresByType libs/owl-carousel/owl.theme.default.min.css "access plus 1 year"
-ExpiresByType images/feedback/feedback-2.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-3.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-5.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-4.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-6.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-7.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-9.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-8.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-10.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-11.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-12.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-13.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-14.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-15.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-16.jpg "access plus 1 year"
-ExpiresByType images/feedback/feedback-17.jpg "access plus 1 year"
-ExpiresByType images/Limonariy-max.jpg "access plus 1 year"
-ExpiresByType images/Limonariy-mini.jpg "access plus 1 year"
-ExpiresByType images/Limonariy-og.jpg "access plus 1 year"
-ExpiresByType images/Odessa-mini.jpg "access plus 1 year"
-ExpiresByType images/Odessa-max.jpg "access plus 1 year"
-ExpiresByType images/Stambul-max.jpg "access plus 1 year"
-ExpiresByType images/Stambul-mini.jpg "access plus 1 year"
-ExpiresByType images/Turkey-max.jpg "access plus 1 year"
-ExpiresByType images/Turkey-mini.jpg "access plus 1 year"
-ExpiresByType images/banner1-min.jpg "access plus 1 year"
-ExpiresByType images/banner2.jpg "access plus 1 year"
-ExpiresByType images/banner3.jpg "access plus 1 year"
-ExpiresByType images/banner4.jpg "access plus 1 year"
-ExpiresByType images/beer-max.jpg "access plus 1 year"
-ExpiresByType images/beer-mini.jpg "access plus 1 year"
-ExpiresByType images/cofe-max.jpg "access plus 1 year"
-ExpiresByType images/cofe-mini.jpg "access plus 1 year"
-ExpiresByType images/eight-march-max.jpg "access plus 1 year"
-ExpiresByType images/eight-march-mini.jpg "access plus 1 year"
-ExpiresByType images/hortica-max.jpg "access plus 1 year"
-ExpiresByType images/hortica-mini.jpg "access plus 1 year"
-ExpiresByType images/karpati-max.jpg "access plus 1 year"
-ExpiresByType images/karpati-min.jpg "access plus 1 year"
-ExpiresByType images/karpati-mini.jpg "access plus 1 year"
-ExpiresByType images/lol-max.jpg "access plus 1 year"
-ExpiresByType images/lol-mini.jpg "access plus 1 year"
-ExpiresByType images/novi-povorot.jpg "access plus 1 year"
-ExpiresByType images/map-signs-solid.svg "access plus 1 year"
-</ifModule>
-
-
-
-
-
-
+Redirect 301 /about https://novipovorot.pp.ua/about.html
