--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 AddCharset UTF-8  .html 
 ErrorDocument 404 /404.html
-Redirect 301 /about https://novipovorot.pp.ua/about.html
+#Redirect 301 /about https://novipovorot.pp.ua/about.html
